# Telegram-News-Analyzer

./: .gitignore  readme.md
src/ETL/: collect_and_load.py  pipeline.py  preprocessors.py  pyproject.toml  utils.py  views.py
src/ETL/config/: .config  CHANNEL_REGISTRY.json  RUSSIAN_STOP_WORDS.json  UKRAINIAN_STOP_WORDS.json  config.py  constants.py  sentiment-words.csv
src/ETL/services/: config_reader.py  text_preprocessor.py  utils.py
src/ETL/services/domain/: predictor.py  sentiment.py  text_preprocessor.py
src/data/news-posts/: WarDonbass.csv  bbbreaking.csv  breakingmash.csv  lentachold.csv  nexta_live.csv  novyny24x7.csv  rian_ru.csv  rt_russian.csv  ru_FTP.csv  u_now.csv  ukraina_novosti.csv
src/data/processed-data/: classified-news.csv
src/data/training-data/: news-for-training.csv
src/models/: BiLSTM-dataset-preprocessing.ipynb  CNN_LSTM-models-news-type-prediction.ipynb  KNN_SVC-models-news-type-prediction.ipynb  KNN_SVC_TREE_NB-models-news-type-prediction.ipynb  Untitled.ipynb  news-type-prediction-tests.ipynb
src/models/ml-models/: KNN_SVC-model-news-type-prediction.ipynb  knn-svm-models-sentiment-analysis.ipynb
src/models/nn-models/: Untitled.ipynb  nn-models-news-type-prediction.ipynb
src/models/trained-models/: cnn-news-type-prediction.h5  keras-tokenizer.pk  knn-news-type-prediction.sav  lstm-news-type-prediction.h5  nb-news-type-prediction.sav  svc-news-type-prediction.sav  tree-news-type-prediction.sav  vectorizer.pk
