[tool.poetry]
name = "Telegram News Analyzer"
version = "0.1.0"
description = ""
authors = ["Illia Makarov <illia_makarov@epam.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
emoji = "^1.7.0"
Telethon = "^1.24.0"
joblib = "^1.1.0"
pandas = "^1.4.2"
scikit-learn = "1.1.1"
keras = "^2.9.0"
pymorphy2 = "^0.9.1"
nltk = "^3.7"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
